# caff-archive

./: Cargo.toml  README.md
src/: archive.rs  error.rs  lib.rs  padding.rs
src/archive/: body.rs  entry.rs  header.rs  key.rs
src/archive/entry/: metadata.rs
src/archive/header/: magic.rs  preview_image.rs  version.rs
src/archive/header/preview_image/: color_type.rs  image_type.rs
